# veterans_resource_hub

./: .gitignore
backend/: all.py  benefit_categories.py  dra.py  pyproject.toml  veteran_confirmation.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: RouteProtection.tsx  layout.tsx  metadata.ts  middleware.ts  page.tsx  routes.ts  use-mobile.tsx  welcome.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/dashboard/: page.tsx
frontend/app/(auth)/profile/: page.tsx
frontend/app/(auth)/settings/: page.tsx
frontend/app/(auth)/welcome/: page.tsx
frontend/app/(authenticated)/: layout.tsx
frontend/app/(authenticated)/welcome/: page.tsx
frontend/app/loggedin/: page.tsx
frontend/app/sso-callback/: page.tsx
frontend/app/welcome/: page.tsx
frontend/components/: AuthSection.tsx  ClientHeader.tsx  Footer.tsx  Header.tsx  Sidebar.tsx  SignInButton.tsx
frontend/components/ui/: header.tsx
frontend/lib/: utils.ts
frontend/pages/: _app.tsx
